--- a/voxplace/index.html
+++ b/voxplace/index.html
@@ -10,7 +10,7 @@
     <!--<button id="menu">Menu ☰</button>-->
     <p id="info-bar">(0, 0, 0) &ensp; Empty</p>
     <div id="username-bar">
-        <input type="text" id="username-input" placeholder="Username">
+        <input type="text" id="username-input" placeholder="Default Username">
     </div>
     <div id="color-controls">
         <button id="edit-voxel-btn">Submit Voxel</button>
